--- a/index.html
+++ b/index.html
@@ -1,119 +1,84 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ओvillain hostऔ | NGL Spammer</title>
+  <meta charset="UTF-8">
+  <title>𓆩villain host𓆪 - NGL Spammer</title>
   <style>
     body {
-      background-image: url('https://files.catbox.moe/r7x7ab.jpg');
+      background: url('https://files.catbox.moe/r7x7ab.jpg') no-repeat center center fixed;
       background-size: cover;
-      background-position: center;
       font-family: Arial, sans-serif;
       color: white;
-      margin: 0;
-      padding: 20px;
       text-align: center;
+      padding: 30px;
     }
-    input, textarea, button {
-      display: block;
-      margin: 10px auto;
+    h1 {
+      color: red;
+      text-shadow: 0 0 10px red;
+    }
+    input, textarea {
       padding: 10px;
-      width: 80%;
-      max-width: 400px;
-      border: 2px solid #ff4d4d;
-      border-radius: 8px;
-      background: rgba(0, 0, 0, 0.6);
+      margin: 10px;
+      width: 300px;
+      border: 2px solid red;
+      background: rgba(0, 0, 0, 0.5);
       color: white;
+      border-radius: 8px;
     }
     button {
-      background: #ff4d4d;
+      padding: 10px 30px;
+      background: red;
+      color: white;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
       font-weight: bold;
-      transition: background 0.3s;
+      box-shadow: 0 0 10px red;
     }
     button:hover {
-      background: #ff1a1a;
+      background: darkred;
     }
-    #log {
-      margin-top: 20px;
-      text-align: left;
-      padding: 10px;
-      width: 90%;
-      max-width: 500px;
-      background: rgba(0,0,0,0.5);
-      border: 2px solid #ff4d4d;
-      border-radius: 10px;
+    .log-box {
+      margin-top: 30px;
+      max-height: 250px;
       overflow-y: auto;
-      max-height: 300px;
+      border: 2px solid red;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
     }
-    #notif {
+    .notif {
       position: fixed;
       top: -100px;
       left: 50%;
       transform: translateX(-50%);
-      background-color: #ff4d4d;
+      background: red;
       color: white;
       padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px red;
+      border-radius: 10px;
       font-weight: bold;
-      transition: top 0.6s ease;
-      z-index: 9999;
+      box-shadow: 0 0 10px red;
+      transition: top 0.3s ease;
+      z-index: 999;
+    }
+    .notif.done {
+      background: darkred;
     }
   </style>
 </head>
 <body>
-  <h1>ओvillain hostऔ</h1>
-  <input type="text" id="username" placeholder="Username NGL (tanpa @)">
-  <textarea id="pesan" placeholder="Isi Pesan"></textarea>
-  <input type="number" id="jumlah" placeholder="Jumlah Pesan (tanpa batas)" min="1">
-  <button onclick="mulaiSpam()">Kirim Spam</button>
-  <div id="notif">Spam Dimulai</div>
-  <div id="log"></div>  <script>
-    function tampilkanNotif(teks) {
-      const notif = document.getElementById("notif");
-      notif.innerText = teks;
-      notif.style.top = "30px";
-      setTimeout(() => {
-        notif.style.top = "-100px";
-      }, 1600);
-    }
+  <h1>𓆩villain host𓆪 - NGL Spammer</h1>
 
-    async function mulaiSpam() {
-      const username = document.getElementById("username").value;
-      const pesan = document.getElementById("pesan").value;
-      const jumlah = parseInt(document.getElementById("jumlah").value);
-      const log = document.getElementById("log");
-      log.innerHTML = "";
+  <input id="username" type="text" placeholder="Username NGL (tanpa @)">
+  <br>
+  <textarea id="message" placeholder="Pesan yang ingin dikirim" rows="4"></textarea>
+  <br>
+  <input id="amount" type="number" placeholder="Jumlah pesan (tak terbatas)">
+  <br>
+  <button onclick="sendSpam()">Kirim Spam</button>
 
-      if (!username || !pesan || !jumlah) {
-        tampilkanNotif("Isi semua kolom!");
-        return;
-      }
+  <div class="log-box" id="log"></div>
 
-      tampilkanNotif("Spam Dimulai");
-
-      for (let i = 1; i <= jumlah; i++) {
-        try {
-          const res = await fetch("https://ngl.link/api/submit", {
-            method: "POST",
-            headers: {"Content-Type": "application/json"},
-            body: JSON.stringify({username: username, question: pesan, deviceId: "random" + Math.random()})
-          });
-
-          if (res.ok) {
-            log.innerHTML += `<div>pesan ke ${i} berhasil terkirim by villain</div>`;
-          } else {
-            log.innerHTML += `<div style="color:red;">pesan ke ${i} gagal dikirim</div>`;
-          }
-        } catch (err) {
-          log.innerHTML += `<div style="color:red;">pesan ke ${i} error: ${err.message}</div>`;
-        }
-        await new Promise(resolve => setTimeout(resolve, 500));
-      }
-
-      log.innerHTML += `<div><b>done yang ke ${jumlah} sudah berhasil terkirim ya 😋</b></div>`;
-      tampilkanNotif("Spam Selesai");
-    }
-  </script></body>
+  <script src="send.js"></script>
+</body>
 </html>
