--- a/index.html
+++ b/index.html
@@ -1,83 +1,70 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>𓆩villain host𓆪 - NGL Spammer</title>
+  <meta charset="UTF-8" />
+  <title>𓆩villain host𓆪 NGL Spammer</title>
   <style>
     body {
+      margin: 0;
       background: url('https://files.catbox.moe/r7x7ab.jpg') no-repeat center center fixed;
       background-size: cover;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       color: white;
       text-align: center;
-      padding: 30px;
     }
-    h1 {
-      color: red;
-      text-shadow: 0 0 10px red;
+    .container {
+      margin-top: 50px;
     }
     input, textarea {
-      padding: 10px;
       margin: 10px;
-      width: 300px;
+      padding: 10px;
+      width: 80%;
       border: 2px solid red;
       background: rgba(0, 0, 0, 0.5);
       color: white;
-      border-radius: 8px;
     }
     button {
-      padding: 10px 30px;
+      padding: 10px 20px;
       background: red;
-      color: white;
       border: none;
-      border-radius: 10px;
-      cursor: pointer;
+      color: white;
       font-weight: bold;
-      box-shadow: 0 0 10px red;
+      cursor: pointer;
     }
-    button:hover {
-      background: darkred;
-    }
-    .log-box {
-      margin-top: 30px;
-      max-height: 250px;
-      overflow-y: auto;
-      border: 2px solid red;
-      padding: 10px;
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 10px;
-    }
-    .notif {
+    #notifikasi {
       position: fixed;
-      top: -100px;
+      top: -50px;
       left: 50%;
       transform: translateX(-50%);
-      background: red;
-      color: white;
+      background: crimson;
       padding: 10px 20px;
-      border-radius: 10px;
-      font-weight: bold;
-      box-shadow: 0 0 10px red;
-      transition: top 0.3s ease;
-      z-index: 999;
+      color: white;
+      border-radius: 8px;
+      transition: top 0.5s ease;
+      z-index: 9999;
     }
-    .notif.done {
-      background: darkred;
+    #log {
+      width: 90%;
+      margin: 20px auto;
+      background: rgba(0, 0, 0, 0.6);
+      border-left: 5px solid red;
+      padding: 10px;
+      max-height: 300px;
+      overflow-y: auto;
+      text-align: left;
     }
   </style>
 </head>
 <body>
-  <h1>𓆩villain host𓆪 - NGL Spammer</h1>
+  <div class="container">
+    <h1>𓆩villain host𓆪 NGL Spammer</h1>
+    <input type="text" id="username" placeholder="username ngl" /><br />
+    <textarea id="pesan" placeholder="isi pesan..."></textarea><br />
+    <button onclick="mulaiSpam()">KIRIM SPAM</button>
 
-  <input id="username" type="text" placeholder="Username NGL (tanpa @)">
-  <br>
-  <textarea id="message" placeholder="Pesan yang ingin dikirim" rows="4"></textarea>
-  <br>
-  <input id="amount" type="number" placeholder="Jumlah pesan (tak terbatas)">
-  <br>
-  <button onclick="sendSpam()">Kirim Spam</button>
-
-  <div class="log-box" id="log"></div>
+    <div id="log"></div>
+    <div id="notifikasi">Notifikasi</div>
+  </div>
 
   <script src="send.js"></script>
 </body>
